# motion-control

./: .gitignore  .travis.yml  CMakeLists.txt  CompilerFlags.cmake  Makefile  Makefile.common  README.txt  building-tests.md  travis.sh
include/motion/: encoder.h  motor.h
include/motion_control/: FixedSizeStack.h  MotionProfile1D.h  PIDController.h  Time.h  TrapezoidalMotionProfile.h  controller.h  encoder.h  fixed_size_stack.h  instance_linked_list.h  instance_list_node.h  math.h  motion_control.h  motion_profile_1d.h  motor.h  pregenerated_motion_profile.h  profile_point.h  runnable.h  runner.h  system.h  system_state.h  time.h  trapezoidal_motion_profile.h
src/: FixedSizeStack.cpp  MotionProfile1D.cpp  Time.cpp  TrapezoidalMotionProfile.cpp  controller.cpp  dummy.cpp  fixed_size_stack.cpp  motion_profile_1d.cpp  pid_controller.cpp  runnable.cpp  runner.cpp  system.cpp  time.cpp  trapezoidal_motion_profile.cpp
src/modules/sysfs_gpio/: CMakeLists.txt  Makefile
src/modules/sysfs_gpio/include/: sysfs_gpio.h
src/modules/sysfs_gpio/src/: gpio.cpp
src/modules/sysfs_gpio/tools/: export.cpp  unexport.cpp
src/test/: CMakeLists.txt  test_fixedsizestack.cpp  test_time.cpp  test_trapezoidal_motion.cpp
test/: CMakeLists.txt  test_instance_list.cpp  test_math.cpp  test_runner.cpp  test_system.cpp  test_time.cpp  test_trapezoidal_motion.cpp
